5.1 서비스 개발 완료 및 5.2 신고 개발 중