@@ -2,17 +2,15 @@ package com.portfolio.aips.project.interaction.view.service.view_scheduler;
 
 import com.portfolio.aips.project.elastic_search.archive.dto.ArchiveDocument;
 import com.portfolio.aips.project.elastic_search.archive.service.archive_el.ArchiveELService;
-import com.portfolio.aips.project.interaction.enums.BoardType;
+import com.portfolio.aips.project.interaction.common.enums.BoardType;
 import com.portfolio.aips.project.interaction.view.repo.dto.request.IncreaseViewCountDTO;
 import com.portfolio.aips.project.interaction.view.service.view.ViewService;
 import com.portfolio.aips.project.utils.DateUtils;
-import jakarta.persistence.EntityManager;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 
@@ -25,8 +23,6 @@ class ViewSchedulerServiceTest {
     @Autowired
     private ViewService viewService;
 
-    @Autowired
-    private EntityManager em;
 
     @Autowired
     private  ArchiveELService archiveELService;
@@ -34,25 +30,31 @@ class ViewSchedulerServiceTest {
     @Test
     void viewSchedulerServiceTest() throws IOException, InterruptedException {
 
-        List<ArchiveDocument> doc = Collections.singletonList(new ArchiveDocument() {{
-            setPk("2");
-            setTitle("spring msa config server");
-            setDescription("ABC");
-            setPopularityScore(1L);
-            setTags(List.of("kafka", "graphql"));
-            setLlmType("chatgpt");
-            setCreatedDateTime(DateUtils.getDateTimeNow());
-            setTopic("IT");
-            setViewCount(0L);
-        }});
+        List<ArchiveDocument> docs = List.of(
+                ArchiveDocument.builder()
+                        .pk("70")
+                        .title("spring msa config server")
+                        .description("ABC")
+                        .popularityScore(1.0)
+                        .usefulnessAvgScore(0.8)
+                        .reliabilityAvgScore(0.9)
+                        .funAvgScore(0.7)
+                        .ratingCount(10L)
+                        .tags(List.of("kafka", "graphql"))
+                        .llmType("chatgpt")
+                        .createdDateTime(DateUtils.getDateTimeNow())
+                        .topic("IT")
+                        .viewCount(0L)
+                        .build()
+        );
 
-        for(ArchiveDocument document : doc) {
+        for(ArchiveDocument document : docs) {
             archiveELService.save(document);
         }
 
 
 
-        viewService.increaseViewCount(new IncreaseViewCountDTO(2L, BoardType.Archive, "2L", null));
+        viewService.increaseViewCount(new IncreaseViewCountDTO(70L, BoardType.Archive, "2L", null));
 
         viewSchedulerService.updateViewCount();
 
